# bevussy

./: .gitignore  CREDITS.md  Cargo.toml  README.md  flake.nix  treefmt.nix
.cargo/: config.toml
res/blend/objects/: arrow.blend  box.blend  coin.blend  cone0.blend  cone1.blend  cone2.blend  cone3.blend  cone4.blend  cube0.blend  cube1.blend  cube2.blend  cube3.blend  cube4.blend  cube5.blend  cube6.blend  window.blend
res/objects/: window.glb
src/: flycam.rs  main.rs  utils.rs
src/plugins/: level.rs  mod.rs  player.rs
src/systems/: mod.rs  player.rs
src/voxels/: mod.rs  voxel_engine.rs
