cargo-features = ["codegen-backend"]

[package]
edition = "2024"
name = "bevussy"
version = "0.0.0"

[profile.dev]
codegen-backend = "cranelift"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[dependencies]
bevy = {features = ["serialize", "wayland"], version = "0.15.3"}
bevy-inspector-egui = "0.29.1"
log = {features = ["max_level_debug", "release_max_level_warn"], version = "0.4.26"}
ron = "0.8.1"
serde = {features = ["derive"], version = "1.0.219"}
