cargo-features = ["codegen-backend"]

[package]
edition = "2024"
name = "bevussy"
version = "0.0.0"

[dependencies]
bevy = {features = ["serialize", "wayland"], version = "0.15.3"}
bevy-inspector-egui = "0.30.0"
bevy_rapier3d = {features = ["debug-render-3d", "parallel", "simd-nightly"], version = "0.29.0"}
log = {features = ["max_level_debug", "release_max_level_warn"], version = "0.4.26"}
ron = "0.8.1"
serde = {features = ["derive"], version = "1.0.219"}

[profile.dev]
codegen-backend = "cranelift"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
