cargo-features = ["codegen-backend"]

[package]
edition = "2024"
name = "bevussy"
version = "0.0.0"

[dependencies]
bevy = {features = ["serialize", "wayland"], version = "0.15.3"}
bevy-inspector-egui = "0.30.0"
bevy_rapier3d = {features = ["debug-render-3d", "serde-serialize", "simd-nightly"], version = "0.29.0"}
dirs = "6.0.0"
log = {features = ["max_level_debug", "release_max_level_warn"], version = "0.4.26"}
rand = "0.9.0"
ron = "0.9.0"
serde = {features = ["derive"], version = "1.0.219"}

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
